--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^10.0.4"
+    "react-toastify": "^10.0.4",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
